# nltk

./: README.md  pyproject.toml
datasets/: input-article.txt  input-simple.txt  input-transcript.txt
ng_nltk_playground/: chatbot.py  sentiment.py  sentiment_trends.py  summarise.py
output/: output-simple.txt
